<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authenticate.LoginFragment">
    <EditText
        android:id="@+id/email_address_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_id" />
    <EditText
        android:id="@+id/password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType = "textPassword"
        android:hint="@string/password_id" />

    <Button

        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/login_button" />

</LinearLayout>