<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authenticate.RegisterFragment">


    <EditText
        android:id="@+id/add_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first" />
    <EditText
        android:id="@+id/add_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last" />
    <EditText
        android:id="@+id/add_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email" />
    <EditText
        android:id="@+id/add_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name" />
    <EditText
        android:id="@+id/add_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password" />
    <Button

        android:id="@+id/btn_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_add_user" />

</LinearLayout>